--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <title>Teste</title>
     </head>
     <body>
-        <h1>teste</h1>
+        <h5>teste</h5>
+        <h1></h1>
+        <div class="page"></div>
+        <div id="page" class="content"></div>
         <p>hashah</p>
     </body>
 </html>
